fix submit button mobile

--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -309,6 +309,7 @@ input[type=submit] {
 	cursor: pointer;
 	transition: .3s;
 	display: inline-flex;
+	-webkit-appearance: none;
 
 	img {
 		width: 30px;
